# Multi-Agent-Financial-Advisor

./: .env.example  .gitignore  README.md  TECHNICAL_REPORT.md  langgraph.json  main.py  overview.md  pyproject.toml
data/knowledge_base/: asset_allocation.txt  retirement_planning.txt  risk_management.txt  tax_optimization.txt
docs/: TECHNICAL_REPORT.md
src/agents/: __init__.py  advisor_agent.py  analyst_agent.py  base_agent.py  client_agent.py  factory.py
src/config/: settings.py
src/guardrails/: __init__.py  validators.py
src/models/: __init__.py  client_profile.py  research_task.py  state.py
src/orchestration/: __init__.py  graph.py  studio_entry.py
src/strategies/: __init__.py  investment_strategy.py
src/tools/: __init__.py  analyst_tools.py  knowledge_store.py  web_search.py
tests/: test_agents.py  test_graph.py  test_guardrails.py  test_tools.py
