[project]
name = "jpmc-takehome"
version = "0.1.0"
description = "Multi-agent financial investment advisor system"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.8",
    "langchain>=1.2.15",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.9",
    "langgraph-cli[inmem]>=0.4.24",
    "langsmith>=0.7.36",
    "openai>=2.32.0",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.23",
    "tiktoken>=0.12.0",
]

[tool.uv]
override-dependencies = [
    "onnxruntime==1.19.2",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
]
